--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,28 +1,54 @@
----
----
-
 <!doctype html>
 {% include copyright.html %}
 <html lang="{{ site.locale | replace: "_", "-" | default: "en" }}" class="no-js">
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    <style>
+      .layout-wrapper {
+        display: flex;
+        flex-direction: row;
+        min-height: 100vh;
+      }
+  
+      .sidebar {
+        width: 200px;
+        background-color: #f3f3f3;
+        padding: 1rem;
+        box-sizing: border-box;
+      }
+  
+      .content-wrapper {
+        flex-grow: 1;
+        padding: 2rem;
+        box-sizing: border-box;
+      }
+    </style>
   </head>
 
-  <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}" dir="{% if site.rtl %}rtl{% else %}ltr{% endif %}">
-    {% include_cached skip-links.html %}
-    {% include_cached masthead.html %}
+  <body>
+    <div class="layout-wrapper">
+      <aside class="sidebar">
+        {% include sidebar.html %}
+      </aside>
 
-    <div class="initial-content">
-      {{ content }}
-      {% include after-content.html %}
-    </div>
+      <div class="content-wrapper">
+        <header class="site-header">
+          <div class="wrapper">
+            <h1 class="site-title">{{ site.title }}</h1>
+            <nav class="site-nav">
+              <a href="{{ '/' | relative_url }}">Home</a> |
+              <a href="{{ '/about/' | relative_url }}">About</a> |
+              <a href="{{ '/categories/' | relative_url }}">Categories</a>
+            </nav>
+          </div>
+        </header>
 
-    {% if site.search == true %}
-      <div class="search-content">
-        {% include_cached search/search_form.html %}
-      </div>
-    {% endif %}
+        <main class="page-content">
+          <div class="wrapper">
+            {{ content }}
+          </div>
+        </main>
 
     <div id="footer" class="page__footer">
       <footer>
