--- a/_includes/basic-ui/sidebar.html
+++ b/_includes/basic-ui/sidebar.html
@@ -6,13 +6,22 @@
     <div class="profile_pic">
         <img src="/assets/images/git-rich-logo.png" alt="Tech Breakthrough">
     </div>
-    <p>Git Rich</p>
+    <p>Tech Blog</p>
 </div>
 
 
 
 <div class="contact sidebar_box">
     <h1>Contact Us</h1>
+    <div class="mail contact_box">
+        <img width="96" height="96" src="https://img.icons8.com/fluency/96/mail--v1.png" alt="mail--v1"/>
+        <a href="matilto:smc9759@gmail.com">frozenreboot |</a>
+        <a href="matilto:smc9759@gmail.com">fjhj1111</a>        
+    </div>
+    <div class="mail contact_box">
+        <a href="matilto:smc9759@gmail.com">lifeisrent |</a>
+        <a href="matilto:smc9759@gmail.com">ausudu</a>        
+    </div>    
     <div class="github contact_box">
         <img width="96" height="96" src="https://img.icons8.com/color/96/github.png" alt="github"/>
         <a href="https://github.com/Git-Rich-Club">Github</a>
