switched main page.

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,9 +10,9 @@ title: Commit - To Get Rich
     </div>
   
     <div class="description">
-      <h1 class="wave_welcome">Welcome to my Blog</h1>
-      <p>From hardware to software,</p>
-      <p>We're <span class="emp_word">Software Engineers</span></p>
+      <h1 class="wave_welcome">Welcome to our blog</h1>
+      <p>From machine vision to robots</p>
+      <p>We' re <span class="emp_word">Software Engineers</span></p>
     </div>
     
 </div>
