category linked properly

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,10 +1,68 @@
 ---
-layout: archive
+layout: default
+
 ---
 
-{{ content }}
+<div id="category_page">
+    <div class="backg">
+    </div>
+    
+    <div class="category_body">
+        <div id="head">
+            {% assign url_parts = page.url | split: '/' %}
+            {% assign last_part = url_parts | last | url_decode %}
 
-{% assign entries_layout = page.entries_layout | default: 'list' %}
-<div class="entries-{{ entries_layout }}">
-  {% include posts-category.html taxonomy=page.taxonomy type=entries_layout %}
+            {% for category in site.categories %}
+                {% if category.name == last_part %}
+
+                    {{ category.icon }}
+                    <h2>{{ last_part }}</h2>
+                    {{ category.icon }}
+
+                {% endif %}
+            {% endfor %}
+        </div>
+        
+        <div id="project_box_wrapper">
+            {% for post in site.posts %}
+                {% for category in post.categories %}
+
+                    {% if page.name == category %}
+                        <!-- <span class="post-meta">{{ post.date | date: '%b %d %Y' }}, {{ site.data.authors[post.author].name }}
+                            <img src="{{ site.baseurl }}{{ site.data.authors[post.author].picture }}" class="gravatar">
+                        </span> -->
+        
+                        <div id="new_project_box" onClick="location.href ='{{ post.url }}'" style="cursor:pointer;">
+                            <div id="imgBox">
+                            {% if post.thumbnail %}
+                                <img src="{{ post.thumbnail }}" alt="{{ post.title }} Thumbnail">
+                            {% endif %}
+                            </div>
+            
+                            {% for sub_category in post.categories %}
+
+                                {% for selected_category in site.categories %}
+                                {% if selected_category.title == sub_category %}
+                                    {% if selected_category.isSub %}
+                                        <a href="{{selected_category.url}}"><p id="box_category" style="background-color: {{ selected_category.color }};">{{ sub_category }}</p></a>
+                                    {% endif %}
+                                {% endif %}
+                                {% endfor %}
+            
+                            {% endfor %}
+            
+                            <a href="{{ post.url }}"><p id="box_title">{{ post.title }}</p></a>
+                            <p class="description">{{ post.excerpt }}</p>
+                            <p id="signature">- Git Rich</p>
+                        </div>
+        
+                    {% endif %}
+                {% endfor %}
+            {% endfor %}
+        </div>
+
+            
+    </div>
+
 </div>
+
