--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,7 +10,7 @@ title: Commit - To Get Rich
     </div>
   
     <div class="description">
-      <h1 class="wave_welcome">Welcome to our blog</h1>
+      <h1 class="wave_welcome">Maintenance ~to 0619</h1>
       <p>From machine vision to robots</p>
       <p>We' re <span class="emp_word">Software Engineers</span></p>
     </div>
