recent post added

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -23,6 +23,7 @@ title: Commit - To Get Rich
 
 
 {% include main/projects.html %}
+{% include main/recent.html %}
 {% include main/notes.html %}
 
 
