--- a/_sass/post/article.scss
+++ b/_sass/post/article.scss
@@ -122,30 +122,38 @@
     // ---------------------------------------------
     // list
     ul {
-        li {
-            margin-top: 5px; margin-bottom: 5px;
+        // li {
+        //     margin-top: 5px; margin-bottom: 5px;
 
             
-            img {
-                width: 24px;
-                height: auto;
-                margin-right: 6px;
-                vertical-align: middle;
-            }
-        }
+        //     img {
+        //         width: 24px;
+        //         height: auto;
+        //         margin-right: 6px;
+        //         vertical-align: middle;
+        //     }
+        // }
+        list-style-type: disc;
+        padding-left: 1.5em;
     }
     
     ol {
-        li {
-            margin-top: 5px; margin-bottom: 5px;
+        // li {
+        //     margin-top: 5px; margin-bottom: 5px;
 
-            img {
-                width: 28px;
-                height: auto;
-                margin-right: 6px;
-                vertical-align: middle;
-            }
-        }
+        //     img {
+        //         width: 28px;
+        //         height: auto;
+        //         margin-right: 6px;
+        //         vertical-align: middle;
+        //     }
+        // }
+        list-style-type: decimal;
+        padding-left: 1.5em;
+    }
+
+    li {
+        display: list-item; // JS가 강제로 flex로 바꾸는 걸 방지
     }
 
 
